# GistDB

./: Cargo.toml  README.md  wrangler.toml
docs/: openapi.yaml
docs/swagger-ui/: index.html
src/: lib.rs
src/models/: request_models.rs  response_models.rs
src/routes/: collection_routes.rs  database_routes.rs  health_routes.rs  mod.rs  object_routes.rs  search_routes.rs
src/services/: github_service.rs  index_service.rs  mod.rs
src/utils/: api_response.rs  cache.rs  mod.rs  search.rs
