[package]
name = "gist-db"
version = "0.1.0"
edition = "2021"
authors = ["Md.Sadiq <mohammadsadiq4950@gmail.com>"]

[package.metadata.release]
release = false

# https://github.com/rustwasm/wasm-pack/issues/1247
[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib"]

[dependencies]
worker = { version = "0.5.0", features = ['http'] }
worker-macros = { version = "0.5.0" }
axum = { version = "0.7", default-features = false }
tower-service = "0.3.2"
console_error_panic_hook = { version = "0.1.1" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.13.1", features = ["v4", "js"] }
chrono = "0.4"
bloom = "0.2.0"
